--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -41,6 +41,7 @@
 
         .message-container.user {
             justify-content: flex-end;
+            flex-direction: row-reverse;
         }
 
         .message-container.assistant {
@@ -51,11 +52,16 @@
             max-width: 70%;
             padding: 10px;
             border-radius: 10px;
-            background-color: #f1f1f1;
         }
 
+        /* Remove background for assistant messages */
+        .message-container.assistant .message-content {
+            background-color: transparent;
+        }
+
+        /* Set user background color to assistant's previous color */
         .message-container.user .message-content {
-            background-color: #d1e7dd;
+            background-color: #f1f1f1;
         }
 
         .message-role {
@@ -66,16 +72,23 @@
         .message-icon {
             width: 40px;
             height: 40px;
+        }
+
+        /* Adjust user icon to be on the right side */
+        .message-container.user .message-icon {
+            margin-left: 10px;
+            margin-right: 0;
+        }
+
+        .message-container.assistant .message-icon {
             margin-right: 10px;
         }
 
         .user-message {
-            flex-direction: row-reverse;
             text-align: right;
         }
 
         .assistant-message {
-            flex-direction: row;
             text-align: left;
         }
 
@@ -89,7 +102,6 @@
         .copy-button:hover {
             text-decoration: underline;
         }
-
     </style>
 </head>
 
@@ -106,11 +118,10 @@
         <div class="chat-container mb-4">
             <div v-for="(message, index) in messages" :key="index"
                 :class="['message-container', message.role === 'user' ? 'user' : 'assistant']">
-                
+
                 <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'"
-                    alt="User or Assistant Icon"
-                    class="message-icon">
-                
+                    alt="User or Assistant Icon" class="message-icon">
+
                 <div :class="['message-content', message.role === 'user' ? 'user-message' : 'assistant-message']">
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                     <div class="message-text" v-html="formatMessageContent(message.content)"></div>
