--- a/index.html
+++ b/index.html
@@ -60,6 +60,30 @@
             font-weight: bold;
             margin-bottom: 5px;
         }
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility 0s, opacity 0.5s ease;
+        }
+        .modal.active {
+            visibility: visible;
+            opacity: 1;
+        }
+        .modal-content {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 
@@ -72,7 +96,8 @@
             </a>
         </div>
 
-        <div class="chat-container mb-4">
+        <!-- Chat Container -->
+        <div class="chat-container mb-4" v-if="showChat">
             <div class="chat chat-start" v-for="(message, index) in messages" :key="index" :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
                 <div class="flex items-center mb-2">
                     <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'" alt="User or Assistant Icon" class="w-8 h-8 mr-2">
@@ -84,9 +109,23 @@
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
         </div>
 
-        <div class="input-area">
+        <!-- Input Area -->
+        <div class="input-area" v-if="showChat">
             <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full" />
             <button @click="sendMessage" class="btn btn-primary mt-2">Kirim</button>
+        </div>
+
+        <!-- Login Modal -->
+        <div :class="['modal', { active: !showChat }]" @click="handleModalClick">
+            <div class="modal-content">
+                <h2 class="text-xl font-bold mb-4">Login</h2>
+                <input type="text" v-model="username" placeholder="Username" class="input input-bordered w-full mb-2" />
+                <input type="password" v-model="password" placeholder="Password" class="input input-bordered w-full mb-4" />
+                <div class="flex justify-between">
+                    <button @click="login" class="btn bg-blue-500 hover:bg-blue-700 text-white">Login</button>
+                    <button @click="skipLogin" class="btn bg-gray-500 hover:bg-gray-700 text-white">Skip Login</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -98,8 +137,27 @@
                 messages: [],
                 typing: false,
                 firstInteraction: true,
+                showChat: false,
+                username: '',
+                password: '',
             },
             methods: {
+                handleModalClick(event) {
+                    if (event.target === event.currentTarget) {
+                        this.showChat = false; // Close modal on outside click
+                    }
+                },
+                login() {
+                    // Simple login logic (replace with actual logic)
+                    if (this.username === 'user' && this.password === 'password') {
+                        this.showChat = true;
+                    } else {
+                        alert('Username atau password salah.');
+                    }
+                },
+                skipLogin() {
+                    this.showChat = true; // Skip login
+                },
                 async sendMessage() {
                     if (this.inputMessage.trim() !== '') {
                         const userMessage = { role: "user", content: this.cleanUpLinks(this.inputMessage) };
