--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chatbot Sederhana dengan Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <style>
-        /* ... styles ... */
-    </style>
-</head>
-
 <body>
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
         <div v-if="!isLoggedIn" class="login-container">
-            <h2>Login</h2>
+            <h2>Apakah Anda ingin login ke akun Anda?</h2>
+            <p>Jika iya, silahkan masukkan nama dan password. Anda boleh skip login ini jika Anda tidak punya akun</p>
             <input type="text" v-model="username" placeholder="Username" class="login-input">
             <input type="password" v-model="password" placeholder="Password" class="login-input">
             <button @click="login" class="btn bg-green-500 hover:bg-green-700 text-white">Login</button>
-            <p>Belum punya akun? <a href="#">Daftar</a></p>
+            <button @click="skipLogin" class="btn btn-outline">Skip Login</button>
         </div>
 
         <div v-else class="chat-container">
@@ -35,20 +23,17 @@
                         username: '',
                         password: '',
                         isLoggedIn: false,
-                        accounts: [
-                            { username: 'Nevan', password: '12345' }
-                        ],
                         // ... data lainnya ...
                     }
                 },
                 methods: {
                     login() {
-                        const foundUser = this.accounts.find(user => user.username === this.username && user.password === this.password);
-                        if (foundUser) {
-                            this.isLoggedIn = true;
-                        } else {
-                            alert('Username atau password salah');
-                        }
+                        // TODO: Implementasi login ke database atau sistem autentikasi lain
+                        // Untuk saat ini, kita anggap login selalu berhasil
+                        this.isLoggedIn = true;
+                    },
+                    skipLogin() {
+                        this.isLoggedIn = true;
                     },
                     // ... metode lainnya ...
                 }
